# sdl_cpp_wrapper

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  class-diagram.umlconfig  format-all.sh  sdl_cpp-class-diagram.uml  sdl_cpp-events-class-diagram.uml  sdl_cpp-fonts-class-diagram.uml  sdl_cpp-ttf-font-class-diagram.uml  sdl_cpp-ttf_font-class-diagram.uml
freetype-cpp/: CMakeLists.txt  freetype_library.cpp  freetype_library.h
freetype-cpp/fonts/: PressStart2P_Regular_ttf.cpp  PressStart2P_Regular_ttf.h
freetype-cpp/include/freetype_cpp/: bitmap_glyph.h  draw_glyph_callback.h  face.h  freetype_exception.h  get_glyph_callback.h  glyph.h  library.h  points.h
freetype-cpp/include/freetype_cpp/internal/: literal_parser.h  safetype.h
freetype-cpp/src/: bitmap_glyph.cpp  face.cpp  glyph.cpp  library.cpp
include/: CMakeLists.txt  SDL_CPP.h  SDL_CPP_Context.h  SDL_CPP_Exception.h  SDL_CPP_Renderer.h  SDL_CPP_Renderer_forward_declaration.h  SDL_CPP_Surface.h  SDL_CPP_Texture.h  SDL_CPP_Window.h  sdl_cpp.h  sdl_cpp_collision_detection.h  sdl_cpp_context.h  sdl_cpp_event_key_state.cpp  sdl_cpp_event_key_state.h  sdl_cpp_event_keys.h  sdl_cpp_event_quit.h  sdl_cpp_events.cpp  sdl_cpp_events.h  sdl_cpp_exception.h  sdl_cpp_key_state.h  sdl_cpp_maths.h  sdl_cpp_mouse_state.h  sdl_cpp_point_transforms.h  sdl_cpp_rectangle_collider.h  sdl_cpp_renderer.h  sdl_cpp_renderer_forward_declaration.h  sdl_cpp_surface.h  sdl_cpp_texture.h  sdl_cpp_window.h
include/sdl_cpp/: bezier.h  collision_detection.h  context.h  event_keys.h  event_mouse_dispatch.h  event_quit.h  events.h  key_state.h  maths.h  mouse_state.h  point_transforms.h  render_to_texture.h  renderer.h  renderer_forward_declaration.h  sdl_cpp.h  sdl_cpp_event_mouse_dispatch.h  sdl_cpp_event_quit.h  sdl_cpp_exception.h  sdl_cpp_mouse_state.h  sdl_cpp_point_transforms.h  sdl_cpp_renderer.h  sdl_cpp_window.h  sdl_exception.h  surface.h  texture.h  window.h
include/sdl_cpp/fonts/: ttf_font.h  ttf_font_context.h
include/sdl_cpp/ttf_font/: sdl_cpp_ttf_font.h  sdl_cpp_ttf_font_context.h  ttf_font.h  ttf_font_context.h
include/sdl_cpp/widgets/: application.h  button.h  default_font.h  image.h  key.h  label.h  lines_no_storage.h  resizable_widget.h  sdl_cpp_widgets_application.h  sdl_cpp_widgets_label.h  sdl_cpp_widgets_resizable_widget.h  sdl_cpp_widgets_widget.h  sdl_cpp_widgets_window_application.h  widget.h  widgets.h  window_application.h
install/: description.txt  license.txt
libraries/: CMakeLists.txt  build-freetype.sh
sdl-cpp/: CMakeLists.txt
sdl-cpp-ttf/: CMakeLists.txt
sdl-cpp-ttf/include/sdl_cpp/fonts/: ttf_font.h
sdl-cpp/include/sdl_cpp/: event_mouse_dispatch.h  event_quit.h  events.h  key_state.h  lerp.h  pixel_buffer_painter.h  rectangle_collider.h  render_to_texture.h  renderer.h  renderer_clip_region.h  renderer_forward_declaration.h  sdl_cpp.h  sdl_size.h  texture.h  texture_pixel_buffer.h  window.h
sdl-cpp/src/: event_keys.cpp  event_quit.cpp  events.cpp  key_state.cpp  maths.cpp  pixel_buffer_painter.cpp  point_transforms.cpp  renderer_clip_region.cpp  texture_pixel_buffer.cpp
src/: bezier.cpp  collision_detection.cpp  event_keys.cpp  event_mouse_dispatch.cpp  event_quit.cpp  events.cpp  key_state.cpp  lerp.cpp  maths.cpp  mouse_state.cpp  point_transforms.cpp  rectangle_collider.cpp  sdl_cpp_collision_detection.cpp  sdl_cpp_event_key_state.cpp  sdl_cpp_event_keys.cpp  sdl_cpp_event_mouse_dispatch.cpp  sdl_cpp_event_quit.cpp  sdl_cpp_events.cpp  sdl_cpp_key_state.cpp  sdl_cpp_maths.cpp  sdl_cpp_mouse_state.cpp  sdl_cpp_point_transforms.cpp  sdl_cpp_rectangle_collider.cpp
src/fonts/: ttf_font.cpp
src/widgets/: application.cpp  button.cpp  default_font.cpp  executable_path_windows.cpp  image.cpp  key.cpp  label.cpp  lines_no_storage.cpp  sdl_cpp_widgets_application.cpp  sdl_cpp_widgets_label.cpp  sdl_cpp_widgets_widget.cpp  sdl_cpp_widgets_window_application.cpp  widget.cpp  window_application.cpp
test-app/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  collision_detection_tests.cpp
ttf-font/: CMakeLists.txt
ttf-font/include/: sdl_cpp_ttf_font.h  sdl_cpp_ttf_font_context.h
widgets/: CMakeLists.txt
widgets/include/: sdl_cpp_widgets_application.h  sdl_cpp_widgets_label.h  sdl_cpp_widgets_widget.h  sdl_cpp_widgets_window_application.h
widgets/include/sdl_cpp/widgets/: application.h  button.h  executable_path.h  image.h  key.h  label.h  resizable_widget.h  widget.h  window_application.h
widgets/src/: button.cpp  default_font.cpp  executable_path_linux.cpp  image.cpp  key.cpp  label.cpp  lines_no_storage.cpp  sdl_cpp_widgets_application.cpp  sdl_cpp_widgets_label.cpp  sdl_cpp_widgets_widget.cpp  sdl_cpp_widgets_window_application.cpp  window_application.cpp
widgets2/: CMakeLists.txt  widgets2.plantuml
widgets2-demo-app/: CMakeLists.txt  main.cpp
widgets2/include/sdl_cpp/widgets2/: application.h  font_writer.h  fonts.h  forward_declarations.h  label.h  panel.h  widget.h  widget_container.h  window.h  window_flags.h
widgets2/src/: application.cpp  font_writer.cpp  fonts.cpp  label.cpp  panel.cpp  widget.cpp  widget_container.cpp  window.cpp
